fix: standardize frontmatter and add mdx fallbacks

--- a/content/private/docs/intro.mdx
+++ b/content/private/docs/intro.mdx
@@ -1,22 +1,13 @@
 ---
+title: "Introduction"
+date: "2024-01-01"
+description: "Welcome to the Swift Coding Club internal docs."
 sidebar_position: 1
 ---
 
-# 内部手册 (Internal Handbook)
+# 欢迎来到内部知识库
 
-欢迎来到 **Swift Coding Club** 的内部知识库！
+这里是 Swift Coding Club 的核心资产沉淀地。
+只有经过验证的成员才能访问此区域。
 
-:::warning 内部资料
-本区域包含社团内部运营、培训资料和项目文档，仅供内部成员参考，请勿随意对外传播。
-:::
-
-## 目录索引
-
-- [如何贡献 (Contributing Guide)](./contributing)
-- [资源排期 (Schedule)](./schedule) (Coming Soon)
-- [项目管理规范 (Project Management)](./pm-guide) (Coming Soon)
-
-## 常用链接
-
-- [GitHub 仓库](https://github.com/swift-coding-club)
-- [微信群公告 (需验证)](https://weixin.qq.com/example)
+请遵守保密协议，不要随意对外分享内部文档。
