feat: complete blog and auth system enhancements
- Fix blog path configuration (unified to data/blog)
- Add 5 comprehensive blog articles:
  * New member getting started guide
  * Quantitative trading introduction with code examples
  * AI finance series: Robo-advisor implementation
  * 2024 tech stack recommendations
  * Alpha factor platform project showcase
- Add 3 internal documentation files:
  * Enhanced club introduction with org structure
  * New member onboarding guide
  * Project development guidelines (Git workflow, code standards)
- Create ENV_SETUP.md for authentication configuration
- Fix Contentlayer parsing errors

--- a/content/private/docs/intro.mdx
+++ b/content/private/docs/intro.mdx
@@ -5,9 +5,149 @@ description: "Welcome to the Swift Coding Club internal docs."
 sidebar_position: 1
 ---
 
-# 欢迎来到内部知识库
+# 欢迎来到内部知识库 🎓
 
-这里是 Swift Coding Club 的核心资产沉淀地。
-只有经过验证的成员才能访问此区域。
+这里是 **Swift Coding Club** 的核心资产沉淀地。只有经过验证的成员才能访问此区域。
 
-请遵守保密协议，不要随意对外分享内部文档。
+> [!IMPORTANT]
+> 请遵守保密协议，不要随意对外分享内部文档。
+
+## 🌟 关于 Swift Coding Club
+
+### 我们的愿景
+
+**Where Finance Meets Intelligence** — 用 AI 重塑金融
+
+我们致力于培养兼具金融思维和技术能力的复合型人才，通过实战项目和深度学习，打造西财最具影响力的技术社团。
+
+### 成立背景
+
+Swift Coding Club 成立于 2023 年秋季学期，由一群对量化交易和 AI 技术充满热情的同学发起。短短一年多，我们已经：
+
+- 👥 **成员规模**：50+ 核心成员
+- 🚀 **项目数量**：完成 12+ 技术项目
+- 📚 **技术分享**：举办 30+ 场分享会
+- 🏆 **竞赛获奖**：全国数学建模竞赛、量化投资大赛等奖项
+
+## 🏗️ 组织架构
+
+```
+                    ┌─────────────┐
+                    │   创始团队   │
+                    └──────┬──────┘
+                           │
+            ┌──────────────┼──────────────┐
+            │              │              │
+      ┌─────▼─────┐  ┌─────▼─────┐  ┌─────▼─────┐
+      │  技术部门  │  │  产品部门  │  │  运营部门  │
+      └─────┬─────┘  └─────┬─────┘  └─────┬─────┘
+            │              │              │
+    ┌───────┼───────┐      │        ┌─────┼─────┐
+    │       │       │      │        │           │
+ 前端组  后端组  算法组  项目组  新媒体组  活动组
+```
+
+### 各部门职责
+
+**技术部门**
+
+- 前端组：网站、Dashboard 开发
+- 后端组：API、数据库、DevOps
+- 算法组：量化策略、ML 模型
+
+**产品部门**
+
+- 项目管理与规划
+- 用户需求分析
+- 产品设计与优化
+
+**运营部门**
+
+- 新媒体运营（公众号、B 站）
+- 活动策划与执行
+- 对外合作与联络
+
+## 💎 核心价值观
+
+### 1. 开放协作 🤝
+
+我们相信知识共享的力量。在 Swift：
+
+- ✅ 所有项目代码开源（内部 GitHub Organization）
+- ✅ 鼓励 Code Review 和技术讨论
+- ✅ 新人友好，老成员积极指导
+
+### 2. 实战至上 💪
+
+不止于理论学习，更注重动手实践：
+
+- ✅ 每个成员至少参与一个项目
+- ✅ 定期 Demo Day 展示成果
+- ✅ 真实数据、真实场景、真实问题
+
+### 3. 持续学习 📚
+
+技术日新月异，保持学习热情：
+
+- ✅ 每周技术分享会
+- ✅ 论文阅读 Journal Club
+- ✅ 内部学习资料库
+
+### 4. 追求卓越 🎯
+
+高标准、严要求：
+
+- ✅ 代码质量：Lint、测试、文档
+- ✅ 设计美学：不做"能用就行"的产品
+- ✅ 用户体验：细节决定成败
+
+## 📂 知识库导航
+
+本知识库包含以下内容：
+
+### 📖 新成员手册
+
+- [入职指南](/internal/docs/onboarding)：快速融入社团
+- [技术栈指南](/internal/docs/tech-stack)：我们使用的工具和技术
+- [Git 工作流](/internal/docs/git-workflow)：协作开发规范
+
+### 🚀 项目文档
+
+- [Alpha 平台使用指南](/internal/docs/alpha-guide)
+- [项目开发规范](/internal/docs/project-guidelines)
+- [代码审查标准](/internal/docs/code-review)
+
+### 📊 研究资料
+
+- [量化策略研究](/internal/docs/quant-research)
+- [机器学习路线图](/internal/docs/ml-roadmap)
+- [论文阅读列表](/internal/docs/paper-reading)
+
+### 🎓 学习资源
+
+- [Python 进阶](/internal/docs/python-advanced)
+- [金融数学基础](/internal/docs/financial-math)
+- [面试准备](/internal/docs/interview-prep)
+
+## 🔐 权限说明
+
+内部知识库分为不同访问级别：
+
+| 级别        | 访问权限            | 说明           |
+| ----------- | ------------------- | -------------- |
+| 👶 见习成员 | 基础文档            | 入职前 3 个月  |
+| 👤 正式成员 | 项目文档 + 研究资料 | 转正后         |
+| 👑 核心成员 | 全部内容 + 财务     | 贡献突出者     |
+| 🎖️ 管理团队 | 完整权限            | 部门负责人以上 |
+
+## 📞 联系方式
+
+有任何问题？
+
+- 💬 **内部群聊**：微信群 / Slack
+- 📧 **邮箱**：club@gofintech.cn
+- 🐙 **GitHub**：[@swift-coding-club](https://github.com/swift-coding-club)
+
+---
+
+**Let's build something amazing together!** 🚀
